--- a/css/game.css
+++ b/css/game.css
@@ -1,9 +1,10 @@
-.background    { background: rgb(52, 166, 251);
+.background    { background: rgb(125, 100, 200);
                  table-layout: fixed;
                  border-spacing: 0;   }
 .background td { padding: 0;          }
-.lava          { background: rgb(255, 100, 100); }
+.lava          { background: rgb(255, 90, 30); }
 .wall          { background: white;   }
+.floater { background: green;}
 
 .game {
   overflow: hidden;
